--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ h4 {
 p {
   font-size: 20px;
 }
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+li::first-letter {
+  text-transform: capitalize;
+}
 .weather-app {
   background: #385170;
   border: 2px solid #142d4c;
@@ -24,9 +32,7 @@ p {
 .city {
   margin: 20px auto;
 }
-.description {
-  text-transform: capitalize;
-}
+
 .search,
 .currentLocation {
   color: #fff;
