--- a/style.css
+++ b/style.css
@@ -62,12 +62,17 @@ li::first-letter {
   font-size: 80px;
   font-weight: 400;
 }
-.celsius,
-.fahrenheit {
+.active {
   font-size: 20px;
   font-weight: 100;
+  color: black;
+  cursor: default;
+  text-decoration: none;
 }
 
+.active:hover {
+  text-decoration: none;
+}
 .card {
   background: #ececec;
   border: 2px solid #142d4c;
